I found that with Server Installation of "LibreOffice 3.6.0.0.beta3 German UI/Locale [Build-ID: 3e2b862] on German WIN7 Home Premium (64bit): Website link in Help/About directly links to <http://de.libreoffice.org/>, but click to the "i" in the LibO Start Center leads to <http://www.libreoffice.org/de>. May be you will have to disconnect from Internet to see the difference because there is a forward on the Website. This problem might be limited to WIN, when I tested LibO 3.5.3 under Ubuntu12 with disconnected web I saw some "try to connect to de.libreoffice.org" Also found the problem for <http://www.libreoffice.org/lt>, not tested systematically for other languages. This bug has some relation to "Bug 51279 - UI: Help/About Website button link should lead to localized LibO Website". Different to situation in "Help About -> Website", the link behind the Start Center "i" has been localized "from the beginning". May be we can get a common fix for Bug 51279 by fixing this one? @András: IMHO those links should use a common source, so that I think that's your part and not for the translation / localization teams?
http://www.libreoffice.org/xx is redirected to http://xx.libreoffice.org, if not, ask website maintaners to make the redirection. Why should I fix it in the code the hard way? About box URL comes from a resource file, Start screen URL comes from configuration. It would take a lot of time to make these the same and I don't see the benefit.
Misunderstanding? My goal is that we have 1 place with 1 URL to "Localized Website" what will be used for all links from LibO to that Website. If we currently use different sources that would need very good reasons not to look amateurish. Currently I invest lots of time to find and encourage members of translation teams to invest additional time to change URLs in their translations to fix Bug 51279, although the problem is already "fixed" for the Start Center "i" button. Please also See Bugs "Bug 52008 - TDF Site: Unify localized web site structures", "Bug 52008 - TDF Site: Unify localized web site structures" I agree, this is nothing what needs a quick fix.
(In reply to comment #2) > Misunderstanding? My goal is that we have 1 place with 1 URL to "Localized > Website" what will be used for all links from LibO to that Website. OK, so what about taking the About box string from configuration data, too? Then you don't have to ping all l10n teams, just the webteam.
Andras Timar: Yes, that would help a lot
Andras Timar committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=291f3fe9d05eccfd125cdaafcdf01328e754122c fdo#52000 take website url from configuration
Andras Timar committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=c015b4ae380e65f3d1169aac33ff96335935ba78 cleanup of m_aWebsiteLinkStr in About box code (fdo#52000)
Andras Timar committed a patch related to this issue. It has been pushed to "libreoffice-3-6": http://cgit.freedesktop.org/libreoffice/core/commit/?id=446cffa2443064dce416ce39ae2547e35bfae208&g=libreoffice-3-6 fdo#52000 take website url from configuration It will be available in LibreOffice 3.6.
Andras Timar committed a patch related to this issue. It has been pushed to "libreoffice-3-6": http://cgit.freedesktop.org/libreoffice/core/commit/?id=e10695d407cd882a4e95fd64a6848606017607b4&g=libreoffice-3-6 cleanup of m_aWebsiteLinkStr in About box code (fdo#52000) It will be available in LibreOffice 3.6.