fdo#52000 take website url from configuration

instead of taking it from a localized resource. This way
we have more control over localizations, no need to ping
each l10n team.

Change-Id: I4f8904b4601cd623399146ce060b9697d7b52671